@@ -1,6 +1,7 @@
 package com.example.progettoispw.pattern.Decorator;
 
 import com.example.progettoispw.bean.CollectableCardBean;
+import com.example.progettoispw.model.Card;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -14,10 +15,12 @@ public class MaxPriceFilter extends SearchDecorator{
     }
 
     @Override
-    public List<CollectableCardBean> executeSearch() {
-        List<CollectableCardBean> listaGrezza = super.executeSearch();
+    public List<Card> executeSearch() {
+        List<Card> listaGrezza = super.executeSearch();
 
-        //apro uno stream sulla listagrezza del livello precedente -> filtro in base a un predicato e toList organizza i risultati del filtro in una lista
-        return listaGrezza.stream().filter(c -> c.getPrezzoCorrente() <= maxPrice).toList();
+        if(maxPrice==0){return listaGrezza;}
+
+        //apro uno stream sulla lista grezza del livello precedente -> filtro in base a un predicato e toList organizza i risultati del filtro in una lista
+        return listaGrezza.stream().filter(c -> c.getPrezzoAttuale() <= maxPrice).collect(Collectors.toList());
     }
 }
